apps/lab-api/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab-api
  namespace: lab-app
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: cloud-lab-platform-dev-lab-api
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
    alb.ingress.kubernetes.io/tags: Project=cloud-lab-platform,Environment=dev,ManagedBy=aws-load-balancer-controller
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lab-api
                port:
                  name: http
